Fix collab z-index with new timeline.

--- a/media/src/css/subtitle-editor/subtitle-editor.scss
+++ b/media/src/css/subtitle-editor/subtitle-editor.scss
@@ -758,7 +758,7 @@ section.collab {
         position: fixed;
         right: 0;
         min-width: 250px;
-        z-index: 50;
+        z-index: 52;
 
         a.toggle-pane {
             background: #333333 url('../../../images/arrow-right.png') center center no-repeat;
